# cpp-bitflag

./: CMakeLists.txt  README.md
include/bitflag/: bitflag.hpp
test/: bitflag.cpp
